--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<meta name="theme-color" content="#282828" />
 		<meta name="color-scheme" content="dark" />
 		<title>Ankr Airdrop</title>
+		<script src="https://telegram.org/js/telegram-web-app.js"></script>
 	</head>
 	<body>
 		<div id="root"></div>
